--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- ✅ SEO Meta Tags -->
+  <title>Nikhil Beniwal | Flutter Developer Portfolio</title>
+  <meta name="description" content="Nikhil Beniwal is a freelance Flutter developer with expertise in Firebase, REST APIs, and in-app purchases. View projects and get in touch." />
+  <meta name="keywords" content="Flutter, Firebase, Flutter Web, Flutter Developer, Portfolio, Nikhil Beniwal, REST APIs, In-App Purchase" />
+  <meta name="author" content="Nikhil Beniwal" />
+
+  <!-- ✅ Open Graph Meta Tags -->
+  <meta property="og:title" content="Nikhil Beniwal | Flutter Developer Portfolio" />
+  <meta property="og:description" content="Freelance Flutter developer with Firebase & REST APIs expertise. Check out my work!" />
+  <meta property="og:image" content="https://yourdomain.com/assets/images/preview.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Nikhil Beniwal | Flutter Developer Portfolio" />
+  <meta name="twitter:description" content="Freelance Flutter developer with Firebase & REST APIs expertise. Check out my work!" />
+  <!--
+  <meta name="twitter:image" content="https://yourdomain.com/assets/images/preview.png" />
+
+   -->
+
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="manifest" href="manifest.json" />
+
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
