--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,10 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+
+  <title> Flutter With Nikhil | Flutter Developer Portfolio</title>
+  <meta name="description" content="I'm Nikhil Beniwal, a Flutter developer building modern, fast, and scalable mobile apps using Flutter, Firebase, and REST APIs. View my projects, skills, and resume.">
+  <meta name="keywords" content="Flutter Developer, Mobile App Developer, Firebase, Dart, REST APIs, Portfolio, Nikhil Beniwal, Flutter with Nikhil, App Development, Android, iOS, UI/UX, GitHub, Firebase Integration, Flutter Projects">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,10 +29,24 @@
   <meta name="apple-mobile-web-app-title" content="mysite">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Open Graph / Facebook / LinkedIn -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://flutter-with-nikhil.web.app/">
+  <meta property="og:title" content="Nikhil Beniwal | Flutter Developer Portfolio">
+  <meta property="og:description" content="Explore Nikhil Beniwal’s projects, skills, and mobile app development experience with Flutter, Firebase, and REST APIs.">
+  <meta property="og:image" content="https://flutter-with-nikhil.web.app/favicon.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://flutter-with-nikhil.web.app/">
+  <meta name="twitter:title" content="Nikhil Beniwal | Flutter Developer Portfolio">
+  <meta name="twitter:description" content="Explore Flutter apps built by Nikhil Beniwal. Fast, scalable and beautiful apps using Flutter & Firebase.">
+  <meta name="twitter:image" content="https://flutter-with-nikhil.web.app/favicon.png">
+
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>mysite</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
