image added for sharing card

--- a/web/index.html
+++ b/web/index.html
@@ -32,16 +32,16 @@
   <!-- Open Graph / Facebook / LinkedIn -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://flutter-with-nikhil.web.app/">
-  <meta property="og:title" content="Nikhil Beniwal | Flutter Developer Portfolio">
+  <meta property="og:title" content="Flutter Developer Portfolio">
   <meta property="og:description" content="Explore Nikhil Beniwal’s projects, skills, and mobile app development experience with Flutter, Firebase, and REST APIs.">
-  <meta property="og:image" content="https://flutter-with-nikhil.web.app/favicon.png">
+  <meta property="og:image" content="https://play-lh.googleusercontent.com/Ck3ZAAfCgk3aJhQNy-_ChJEOOzvZNFjbdahGtTOzaklYK6fNN1KUruQmmbHVi1cbjn8=s188-rw">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://flutter-with-nikhil.web.app/">
-  <meta name="twitter:title" content="Nikhil Beniwal | Flutter Developer Portfolio">
+  <meta name="twitter:title" content="Flutter Developer Portfolio">
   <meta name="twitter:description" content="Explore Flutter apps built by Nikhil Beniwal. Fast, scalable and beautiful apps using Flutter & Firebase.">
-  <meta name="twitter:image" content="https://flutter-with-nikhil.web.app/favicon.png">
+  <meta name="twitter:image" content="https://play-lh.googleusercontent.com/Ck3ZAAfCgk3aJhQNy-_ChJEOOzvZNFjbdahGtTOzaklYK6fNN1KUruQmmbHVi1cbjn8=s188-rw">
 
 
   <!-- Favicon -->
